modules/gdscript/tests/scripts/analyzer/errors/access_level_private_var_subclass.gd
@private

class Foo:
    var a = 1

class Bar extends Foo:
    func bar():
        print(a)

func test():
    pass
